made changes to index.html

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 		<div id="hd">
 			<div class="yui-gc">
 				<div class="yui-u first">
-					<h1>Jonathan Doe</h1>
-					<h2>Web Designer, Director</h2>
+					<h1>Catherine Vidas</h1>
+					<h2>PN Scholar, Batch 2024</h2>
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
 						<h3><a id="pdf" href="#">Download PDF</a></h3>
-						<h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-						<h3>(313) - 867-5309</h3>
+						<h3><a href="mailto:name@yourdomain.com">catherine.vidas@student.passerellesnumeriques.org</a></h3>
+						<h3>09066125761</h3>
 					</div><!--// .contact-info -->
 				</div>
 			</div><!--// .yui-gc -->
@@ -155,7 +155,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Jonathan Doe &mdash; <a href="mailto:name@yourdomain.com">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
+			<p>CAtherine Vidas &mdash; <a href="mailto:name@yourdomain.com">catherine.vidas@student.passerellesnumeriques.org</a> &mdash; (313) - 867-5309</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
