made changes in index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <li><i class="fa-solid fa-book"></i></li>
                         <li><i class="fas fa-pen"></i></li>
                         <li><i class="fas fa-music"></i></li>
-                        <li><i class="fa-solid fa-book"></i></li>
+                        <li><i class="fa-solid fa-video"></i></li>
                     </ul>
                 </div>
                 </div>
