made changes to index.html

--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
                     <i class="fas fa-user-circle"></i>
                     <span>Profile</span>
                 </h2>
-                <p>A dedicated and determined individual who is not afraid to face life's challenges. 
-                    Passionate with developing websites that make other people's jobs easier and more productive.
-                    <br><br>
-                    Has experience with building and designing websites,
-                    and was able to work as a productive team member and effectively self-manage 
-                    while working on independent assignments.
-                </p>
+                <p>A hard-working and determined first year college student pursuing 
+                    Certificate in Computer Technology at the Univerity of San Carlos - Talamban Campus.
+                    <br><br> Has a shy personality but is  not afraid to face  any life's challenges. 
+                    Skilled in HTML and CSS, and passionate with developing websites that make other 
+                    people's jobs easier and more productive.</p>
             </div>
             <div class="info education">
                 <h2 class="title">
@@ -38,14 +36,14 @@
                 </h2>
                 <ul>
                     <li>
-                        <h5>2024-2026</h5>
-                        <h4>Bachelor of Science in Information Technology (BSIT)</h4>
+                        <h5>2022 - present</h5>
+                        <h4>Certificate in Computer Technology (CCT)</h4>
                         <h4>University of San Carlos</h4>
                     </li>
                     <li>
-                        <h5>2022-2024</h5>
-                        <h4>Certificate in Computer Technology (CCT)</h4>
-                        <h4>University of San Carlos</h4>
+                        <h5>2020 - 2022</h5>
+                        <h4>Accountancy, Business and Management (ABM Strand)</h4>
+                        <h4>Mantalongon National High School</h4>
                     </li>
                 </ul>
             </div>
@@ -71,7 +69,7 @@
                     <li>
                         <span class="text">Cebuano</span>
                         <div class="percent">
-                            <div style="width: 99%;"></div>
+                            <div style="width: 100%;"></div>
                         </div>
                     </li>
                 </ul>
@@ -104,7 +102,7 @@
             <div class="top_right">
                 <div class="name">
                     <h2>Catherine Vidas</h2>
-                    <h2>Web Developer</h2>
+                    <h2>Student</h2>
                     
                 </div>
                 <div class="contact_info">
@@ -132,12 +130,12 @@
             <div class="about">
                 <h2 class="title2">
                     <i class="fas fa-briefcase"></i>
-                    <span>Experience</span>
+                    <span>Experience<h6>[ future dates ]</h6></span>
                 </h2>
                 <div class="box">
                     
                     <div class="year_company">
-                        <h5>2024 - present</h5>
+                        <h5>2024 - 2030</h5>
                         <h5>Accenture
                             <h6>
                                 <i class="fa-sharp fa-solid fa-location-pin"></i>
